--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,49 @@
 asgiref==3.8.1
-Django==5.2.3
+certifi==2025.8.3
+cffi==1.16.0
+charset-normalizer==3.3.2
+coreapi==2.3.3
+coreschema==0.0.4
+coverage==7.5.1
+cryptography==45.0.6
+defusedxml==0.7.1
+Django==5.2.5
 django-allauth==65.9.0
-django-debug-toolbar==5.2.0
-sqlparse==0.5.3
+django-cors-headers==4.3.1
+django-debug-toolbar==4.3.0
+django-extensions==3.2.3
+django-filter==24.2
+django-templated-mail==1.1.1
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
+djoser==2.3.3
+drf-yasg==1.21.7
+idna==3.7
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.6
+MarkupSafe==2.1.5
+oauthlib==3.2.2
+packaging==24.0
+psycopg2-binary==2.9.9
+pycparser==2.22
+pydotplus==2.0.2
+PyJWT==2.8.0
+pyparsing==3.1.2
+python3-openid==3.2.0
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.32.4
+requests-oauthlib==2.0.0
+simplejwt==2.0.1
+social-auth-app-django==5.4.1
+social-auth-core==4.5.4
+sqlparse==0.5.0
+typing==3.7.4.3
+uritemplate==4.1.1
+urllib3==2.5.0
+openai>=1.55.0
+tiktoken>=0.8.0
+streamlit>=1.39.0
+pandas>=2.2.0
+pydantic>=2.10.0
